<resources>
    <string name="app_name">智慧社区</string>
    <string name="login_pic">网格化信息管理平台</string>
    <string name="login_btn">登       录</string>
    <string name="register_btn">注 册</string>
    <string name="input_id">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd2">请再次输入密码</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">管理首页</string>
    <string name="title_dashboard">服务列表</string>
    <string name="title_notifications">个人中心</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
