<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <android.support.constraint.Group
        android:id="@+id/group2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_back"
        app:constraint_referenced_ids="login_pic, login_txt"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/login_pic"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="TODO"
        android:src="@drawable/homeplant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login_pic"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pic"
        app:layout_constraintVertical_bias="0.013" />

    <EditText
        android:id="@+id/login_id"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/ic_account"
        android:drawablePadding="10dp"
        android:hint="@string/input_id"
        android:textSize="18sp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_txt" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:hint="@string/input_pwd"
        android:inputType="textWebPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_id" />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_normal"
        android:text="@string/login_btn"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/login_pwd"
        app:layout_constraintStart_toStartOf="@+id/login_pwd"
        app:layout_constraintTop_toBottomOf="@+id/radio_user_group" />

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:text="居民注册"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/login_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:text="忘记密码"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <RadioGroup
        android:id="@+id/radio_user_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/login_pwd"
        app:layout_constraintTop_toBottomOf="@+id/login_pwd">

        <RadioButton
            android:id="@+id/radio_resident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="居民" />

        <RadioButton
            android:id="@+id/radio_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="管理员" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>